# B3-Shooter2D-Nezout

./: README.md
Shooter2D/: Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyAnimation.h  Player.cpp  Player.h  PlayerAnimation.h  Shooter2D.cpp  Shooter2D.sln  Shooter2D.vcxproj  Shooter2D.vcxproj.filters  vcpkg.json
Shooter2D/x64/Debug/: Shooter2D.exe.recipe  Shooter2D.vcxproj.FileListAbsolute.txt  vc143.idb
Shooter2D/x64/Debug/Shooter2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Shooter2D.lastbuildstate  Shooter2D.write.1u.tlog  VcpkgInstallManifestx64-windows.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
